fix: task alignment

--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -9,14 +9,13 @@
 .task > div {
     display: flex;
     align-items: center;
-    gap: 1.5rem;
+    gap: .75rem;
 }
 
 .checkbox label {
     display: block;
     position: relative;
     padding-left: .5rem;
-    margin-bottom: 1rem;
     cursor: pointer;
     font-size: 22px;
     -webkit-user-select: none;
@@ -33,12 +32,15 @@
     width: 0;
 }
 
+.checkbox label,
+.checkmark {
+    height: 1.2rem;
+    width: 1.2rem;
+}
 .checkmark {
     position: absolute;
     top: 0;
     left: 0;
-    height: 1.2rem;
-    width: 1.2rem;
     border-radius: 999px;
     border: 2px solid var(--blue);
     background-color: transparent;
